add OpenAI Agents SDK

--- a/AI_Agent_Service/multi_ai_agent_with_tools.ipynb
+++ b/AI_Agent_Service/multi_ai_agent_with_tools.ipynb
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please provide your account number to retrieve the latest transaction details.\n"
+      "Please provide your account number so I can retrieve your latest transaction details.\n"
      ]
     }
    ],
@@ -114,13 +114,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here are the latest transaction details for your account:\n",
+      "**Transaction Details:**\n",
       "\n",
-      "| Transaction  | Date              | Amount | Description       | Transaction ID     |\n",
-      "|--------------|-------------------|--------|-------------------|--------------------|\n",
-      "| 9HX25435AB0123456 | 2024-09-29 12:45:30 | $75.00 | Watercolor Paint Set & Brush Set from Alice's Art Supplies | 9HX25435AB0123456 |\n",
-      "\n",
-      "If you have any more questions, feel free to ask!\n"
+      "| **Transaction**       | **Date**         | **Amount**  | **Description**                           | **Transaction ID**       |\n",
+      "|-----------------------|------------------|------------|------------------------------------------|--------------------------|\n",
+      "| Completed            | 2024-09-29      | $75.00     | Purchase of Watercolor Paint Set & Brush Set | 9HX25435AB0123456       |\n"
      ]
     }
    ],
@@ -138,13 +136,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here is your account balance information:\n",
+      "**Account Details:**\n",
       "\n",
-      "| Account Balance | Date              | Balance Amount | Account ID    |\n",
-      "|-----------------|-------------------|----------------|---------------|\n",
-      "| Balance         | 2024-10-09 10:20:15 | $150.00         | A1234567890   |\n",
-      "\n",
-      "If you have any more questions, feel free to ask!\n"
+      "| **Account Balance**  | **Date**       | **Balance Amount** | **Account ID**       |\n",
+      "|-----------------------|----------------|---------------------|----------------------|\n",
+      "| Verified             | 2024-10-09    | $150.00            | A1234567890         |\n"
      ]
     }
    ],
