--- a/Semantic_Kernel/multi_agent/sk_multi_agent_with_session_manager_implementation.ipynb
+++ b/Semantic_Kernel/multi_agent/sk_multi_agent_with_session_manager_implementation.ipynb
@@ -26,8 +26,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "session with f5a757dc-2abc-431a-b093-86679526ee03 not found\n",
-      "Sure, I can help with that. Could you please provide your account number?\n"
+      "session with 0e17aa1b-5fb6-4578-8a17-26e67cf212e7 not found\n",
+      "Could you please provide your account number so I can assist you in retrieving your credit card balance?\n"
      ]
     }
    ],
@@ -46,21 +46,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account Details:\n",
+      "**Transaction Details:**\n",
       "\n",
-      "- **Account ID:** A1234567890\n",
-      "- **Account Status:** Verified\n",
-      "- **Account Type:** Personal\n",
-      "- **Currency:** USD\n",
-      "- **Credit Card Balance:** $150.00\n",
-      "- **Owner:**\n",
-      "  - **Name:** John Doe\n",
-      "  - **Address:** 123 Main St, Anytown, CA, 12345, US\n",
-      "  - **Phone:** +1234567890\n",
-      "- **Email:** example@domain.com\n",
-      "- **Account Created On:** 2023-01-15\n",
-      "- **Last Updated:** 2024-10-09\n",
-      "\n"
+      "- **Transaction ID:** 9HX25435AB0123456  \n",
+      "- **Status:** Completed  \n",
+      "- **Amount:** $75.00 USD  \n",
+      "- **Transaction Fee:** $2.50 USD  \n",
+      "- **Payment Method:** Transify  \n",
+      "\n",
+      "**Payer Details:**  \n",
+      "- **Payer ID:** A1234567890  \n",
+      "- **Name:** John Doe  \n",
+      "- **Email:** buyer@example.com  \n",
+      "- **Country:** US  \n",
+      "\n",
+      "**Payee Details:**  \n",
+      "- **Merchant ID:** MERCHANT987654321  \n",
+      "- **Name:** Alice's Art Supplies  \n",
+      "- **Email:** seller@example.com  \n",
+      "\n",
+      "**Items Purchased:**  \n",
+      "1. **Watercolor Paint Set** - $50.00 USD  \n",
+      "2. **Brush Set** - $25.00 USD  \n",
+      "\n",
+      "**Shipping Address:**  \n",
+      "- **Recipient Name:** John Doe  \n",
+      "- **Address:** 123 Main St, Anytown, CA, 90210, US  \n",
+      "- **Shipping Cost:** $5.00 USD  \n",
+      "\n",
+      "**Transaction Timestamps:**  \n",
+      "- **Created At:** 2024-09-29T12:45:30Z  \n",
+      "- **Last Updated At:** 2024-09-29T12:46:45Z  \n",
+      "\n",
+      "For more details, you can review the transaction at:  \n",
+      "[Transaction Details](https://api.transify.com/v1/payments/transaction/9HX25435AB0123456)  \n",
+      "\n",
+      "Let me know if you have any further questions!\n"
      ]
     }
    ],
@@ -78,9 +99,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your current credit card balance is $150.00.\n",
+      "**Account Details:**\n",
       "\n",
-      "If you need any further details or assistance, please let me know!\n"
+      "- **Account ID:** A1234567890  \n",
+      "- **Account Status:** Verified  \n",
+      "- **Account Type:** Personal  \n",
+      "- **Currency:** USD  \n",
+      "- **Credit Card Balance:** $150.00 USD  \n",
+      "\n",
+      "**Owner Details:**  \n",
+      "- **Name:** John Doe  \n",
+      "- **Email:** example@domain.com  \n",
+      "- **Phone:** +1234567890  \n",
+      "- **Address:** 123 Main St, Anytown, CA, 12345, US  \n",
+      "\n",
+      "**Account Creation Date:** 2023-01-15T08:55:30Z  \n",
+      "**Last Updated:** 2024-10-09T10:20:15Z  \n",
+      "\n",
+      "You can find additional details [here](https://api.transify.com/v1/accounts/A1234567890).  \n",
+      "\n",
+      "Let me know if there's anything else you'd like help with!\n"
      ]
     }
    ],
@@ -98,8 +136,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "session with 37421ae5-bcc5-4d43-be46-c287391ef6b2 not found\n",
-      "I can help you with that. Please provide your account number so that I can fetch the account details for you.\n"
+      "session with 6fb2631d-f123-42dd-ac69-6f96ed3318c9 not found\n",
+      "Can you please provide your account number so I can retrieve your account balance?\n"
      ]
     }
    ],
@@ -118,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It appears that the account number you provided, 3433, is not found in our system. Please double-check the account number and provide the correct one.\n"
+      "It seems that the account number \"3433\" could not be found in our records. Could you please confirm the account number or provide a different one so I can assist you further?\n"
      ]
     }
    ],
@@ -136,9 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your query was about your overdraft limit, but the current account information does not include the overdraft limit details. \n",
-      "\n",
-      "Would you like me to retrieve more specific details regarding overdraft limits by using the transaction details or any other specific information? Please confirm how you'd like to proceed or provide any additional details if necessary.\n"
+      "The provided account information does not indicate an overdraft limit. To assist you further, can you please confirm if your account includes overdraft services or provide any additional details?\n"
      ]
     }
    ],
@@ -156,9 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm here to assist with account or transaction-related questions for Transify. For planning a road trip to Zion National Park, I recommend using a travel planning service or consulting travel guides.\n",
-      "\n",
-      "If you have any questions related to your Transify account or transactions, please let me know!\n"
+      "I can only assist with questions regarding account or transaction details for Transify. For planning a road trip, I recommend using travel planning resources or websites dedicated to travel recommendations. Let me know if you have any Transify-related questions!\n"
      ]
     }
    ],
@@ -170,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sk-autogen",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
